--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@notionhq/client": "^0.4.9",
     "body-parser": "^1.19.0",
+    "braintree": "^3.10.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^10.0.1",
     "stripe": "^8.188.0"
   },
   "devDependencies": {
+    "@types/braintree": "^3.3.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
     "eslint": "^8.2.0",
